Fix double scroll bar issue

--- a/app/assets/stylesheets/landing_page.css.scss
+++ b/app/assets/stylesheets/landing_page.css.scss
@@ -7,6 +7,12 @@ $indigo700: #303f9f;
 $grey400: #BDBDBD;
 $grey900: #212121;
 
+body
+{
+overflow-x: hidden;
+width: 100%
+}
+
 #splash_page {
   height: 525px;
   vertical-align: middle;
@@ -26,9 +32,6 @@ $grey900: #212121;
     width: 650px;
     text-align: left;
   }
-
-
-
 }
 
 @media (max-width: 750px) {
@@ -37,9 +40,6 @@ $grey900: #212121;
     text-align: left;
     padding: 10px;
   }
-
-
-
 }
 
 @media (max-width: 780px) {
